--- a/.github/workflows/main_acs-handson.yml
+++ b/.github/workflows/main_acs-handson.yml
@@ -23,9 +23,7 @@ jobs:
 
       - name: npm install, build, and test
         run: |
-          npm install
-          npm run build --if-present
-          npm run test --if-present
+          npm i --save-dev @types/uuid nstall --legacy-peer-deps
 
       - name: Upload artifact for deployment job
         uses: actions/upload-artifact@v2
