--- a/.github/workflows/main_acs-handson.yml
+++ b/.github/workflows/main_acs-handson.yml
@@ -1,54 +1,38 @@
 # Docs for the Azure Web Apps Deploy action: https://github.com/Azure/webapps-deploy
 # More GitHub Actions for Azure: https://github.com/Azure/actions
 
-name: Build and deploy Node.js app to Azure Web App - acs-handson
-
+# File: .github/workflows/workflow.yml
+name: JavaScript CI
 on:
   push:
     branches:
       - main
   workflow_dispatch:
 
+env:
+  AZURE_WEBAPP_NAME: my-app-name   # set this to your application's name
+  AZURE_WEBAPP_PACKAGE_PATH: 'my-app-path'      # set this to the path to your web app project, defaults to the repository root
+  NODE_VERSION: '14.x'                # set this to the node version to use
+
 jobs:
-  build:
+  build-and-deploy:
+    name: Build and Deploy
     runs-on: ubuntu-latest
-
     steps:
-      - uses: actions/checkout@v2
-
-      - name: Set up Node.js version
-        uses: actions/setup-node@v1
-        with:
-          node-version: '16.x'
-
-      - name: npm install, build, and test
-        run: |
-          npm i --save-dev @types/uuid nstall --legacy-peer-deps
-
-      - name: Upload artifact for deployment job
-        uses: actions/upload-artifact@v2
-        with:
-          name: node-app
-          path: .
-
-  deploy:
-    runs-on: ubuntu-latest
-    needs: build
-    environment:
-      name: 'Production'
-      url: ${{ steps.deploy-to-webapp.outputs.webapp-url }}
-
-    steps:
-      - name: Download artifact from build job
-        uses: actions/download-artifact@v2
-        with:
-          name: node-app
-
-      - name: 'Deploy to Azure Web App'
-        id: deploy-to-webapp
-        uses: azure/webapps-deploy@v2
-        with:
-          app-name: 'acs-handson'
-          slot-name: 'Production'
-          publish-profile: ${{ secrets.AZUREAPPSERVICE_PUBLISHPROFILE_FBF1EF16A62A4163B683A36677A5BD1C }}
-          package: .
+    - uses: actions/checkout@v2
+    - name: Set up Node.js version
+      uses: actions/setup-node@v1
+      with:
+        node-version: '16.x'
+      run: |
+        # Build and test the project, then
+        # deploy to Azure Web App.
+        npm i --save-dev @types/uuid install --legacy-peer-deps
+      working-directory: my-app-path
+    - name: 'Deploy to Azure WebApp'
+      uses: azure/webapps-deploy@v2
+      with: 
+      app-name: 'acs-handson'
+        slot-name: 'Production'
+        publish-profile: ${{ secrets.AZUREAPPSERVICE_PUBLISHPROFILE_FBF1EF16A62A4163B683A36677A5BD1C }}
+        package: .
