--- a/.github/workflows/main_acs-handson.yml
+++ b/.github/workflows/main_acs-handson.yml
@@ -24,6 +24,7 @@ jobs:
       uses: actions/setup-node@v1
       with:
         node-version: '16.x'
+    - name: npm install, build, and test
       run: |
         # Build and test the project, then
         # deploy to Azure Web App.
