--- a/.github/workflows/main_acs-handson.yml
+++ b/.github/workflows/main_acs-handson.yml
@@ -20,6 +20,17 @@ jobs:
         # Build and test the project, then
         # deploy to Azure Web App.
         npm i --save-dev @types/uuid install --legacy-peer-deps
+        
+    # Run analyzers
+    - name: Run Microsoft Security DevOps Analysis
+      uses: microsoft/security-devops-action@preview
+      id: msdo
+    # Upload alerts to the Security tab
+    - name: Upload alerts to Security tab
+      uses: github/codeql-action/upload-sarif@v2
+      with:
+        sarif_file: ${{ steps.msdo.outputs.sarifFile }}
+        
     - name: 'Deploy to Azure WebApp'
       uses: azure/webapps-deploy@v2
       with: 
